--- a/.github/workflows/ci-feature.yml
+++ b/.github/workflows/ci-feature.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - "feature/**"
+      - "fix/**"
+      - "test/**"
 
 jobs:
   detect_changes:
@@ -11,29 +13,22 @@ jobs:
 
   lint_and_sast:
     needs: detect_changes
+    if: needs.detect_changes.outputs.matrix != '{}'
     runs-on: ubuntu-latest
     strategy:
-      matrix:
-        folder: [android-kotlin, spring-backend, llm-backend, next-frontend]
+      matrix: ${{ fromJson(needs.detect_changes.outputs.matrix) }}
     steps:
       - uses: actions/checkout@v4
 
-      - name: Skip unchanged folder
-        if: |
-          needs.detect_changes.outputs.changed_folders != '' &&
-          !contains(needs.detect_changes.outputs.changed_folders, matrix.folder)
-        run: |
-          echo "Skipping ${{ matrix.folder }}"
-          echo "SKIP_FOLDER=true" >> $GITHUB_ENV
+      - name: Print detected matrix
+        run: echo "${{ toJson(matrix) }}"
 
       - name: Run lint
-        if: env.SKIP_FOLDER != 'true'
         run: |
           echo "Lint on ${{ matrix.folder }}"
-          # run lint commands here
+          # lint command
 
       - name: Run SAST
-        if: env.SKIP_FOLDER != 'true'
         run: |
           echo "SAST on ${{ matrix.folder }}"
-          # run SAST commands here
+          # SAST command
