fix(change-detect): fixed the empty string issue for matrix

--- a/.github/workflows/change-detect.yml
+++ b/.github/workflows/change-detect.yml
@@ -1,5 +1,11 @@
 name: Detect Changed Folders
-on: [workflow_call]
+
+on:
+  workflow_call:
+    outputs:
+      matrix:
+        description: "Matrix of changed folders"
+        value: ${{ jobs.detect.outputs.matrix }}
 
 jobs:
   detect:
