fix(change-detect): use dev branch as base instead

--- a/.github/workflows/change-detect.yml
+++ b/.github/workflows/change-detect.yml
@@ -18,6 +18,7 @@ jobs:
       - id: filter
         uses: dorny/paths-filter@v3
         with:
+          base: dev
           filters: |
             android-kotlin: android-kotlin/**
             spring-backend: spring-backend/**
