--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -1,16 +1,19 @@
 name: Pull Request CI pipeline
+
 on:
   pull_request:
     branches:
       - main
       - dev
       - staging
+
 jobs:
   detect-changed:
     uses: ./.github/workflows/change-detect.yml
 
   build:
     needs: detect-changed
+    if: ${{ needs.detect-changed.outputs.hasChanges == 'true' }}
     strategy:
       matrix: ${{ fromJson(needs.detect-changed.outputs.matrix) }}
       fail-fast: false
@@ -20,6 +23,7 @@ jobs:
 
   codeql:
     needs: build
+    if: ${{ needs.detect-changed.outputs.hasChanges == 'true' }}
     runs-on: ubuntu-latest
     strategy:
       matrix: ${{ fromJson(needs.detect-changed.outputs.matrix) }}
@@ -35,3 +39,11 @@ jobs:
 
       - name: Run CodeQL Analysis
         uses: github/codeql-action/analyze@v3
+
+  no_changes_notice:
+    needs: detect-changed
+    if: ${{ needs.detect-changed.outputs.hasChanges == 'false' }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Print no changes message to step summary
+        run: echo "No relevant folders changed; skipping build and CodeQL." >> $GITHUB_STEP_SUMMARY
