--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -113,3 +113,15 @@ jobs:
           ansible-playbook -i ${{ inputs.inventory_file }} playbook.yml --private-key ../../private_key.pem -u ubuntu
         env:
           ANSIBLE_HOST_KEY_CHECKING: False
+
+      - name: Run OWASP ZAP Baseline Scan
+        uses: zaproxy/action-baseline@v0.9.0
+        with:
+          target: "http://${{ steps.tf-output.outputs.INSTANCE_IP }}"
+          fail_build_on_alert: "true"
+
+      - name: Upload ZAP Report
+        uses: actions/upload-artifact@v3
+        with:
+          name: zap-report
+          path: zap_report.html
