feat(ansible): add logging to docker containers in ec2

--- a/infra/ansible/playbook.yml
+++ b/infra/ansible/playbook.yml
@@ -38,3 +38,11 @@
       shell: docker compose up -d
       args:
         chdir: /home/ubuntu
+
+    - name: Show running Docker containers
+      shell: docker ps
+      register: running_containers
+
+    - name: Display running containers
+      debug:
+        var: running_containers.stdout_lines
