--- a/.github/workflows/lint-and-sast.yml
+++ b/.github/workflows/lint-and-sast.yml
@@ -27,7 +27,8 @@ jobs:
         if: env.FOLDER == 'next-frontend'
         uses: actions/setup-node@v3
         with:
-          cache: npm
+          cache: "npm"
+        cache-dependency-path: ${{ env.FOLDER }}/package-lock.json
 
       - name: Setup Java (Spring & Android)
         if: env.FOLDER == 'spring-backend' || env.FOLDER == 'android-kotlin'
