--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -118,7 +118,7 @@ jobs:
         uses: zaproxy/action-baseline@v0.9.0
         with:
           target: "http://${{ steps.tf-output.outputs.INSTANCE_IP }}"
-          fail_build_on_alert: "true"
+          fail_action: true
 
       - name: Upload ZAP Report
         uses: actions/upload-artifact@v4
