--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,41 @@
+version: "3.8"
+
 services:
   frontend:
     build:
       context: ./next-frontend
     image: ${DOCKER_USERNAME}/frontend:${IMAGE_TAG}
-    ports:
-      - "3000:3000"
+    expose:
+      - "3000"
 
   backend:
     build:
       context: ./spring-backend
     image: ${DOCKER_USERNAME}/backend:${IMAGE_TAG}
+    expose:
+      - "8080"
+    depends_on:
+      - mongodb
+    environment:
+      - MONGODB_URI=mongodb://mongodb:27017/simbus-mongo
+
+  mongodb:
+    image: mongo:6.0
+    restart: unless-stopped
     ports:
-      - "8080:8080"
+      - "27017:27017"
+    volumes:
+      - mongo-data:/data/db
+
+  nginx:
+    image: nginx:latest
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    depends_on:
+      - frontend
+      - backend
+
+volumes:
+  mongo-data:
