--- a/.github/workflows/change-detect.yml
+++ b/.github/workflows/change-detect.yml
@@ -30,38 +30,6 @@ jobs:
             llm-backend: llm-backend/**
             next-frontend: next-frontend/**
 
-      name: Detect Changed Folders
-
-on:
-  workflow_call:
-    outputs:
-      matrix:
-        description: "Matrix of changed folders"
-        value: ${{ jobs.detect.outputs.matrix }}
-      hasChanges:
-        description: "Whether any relevant folder changed"
-        value: ${{ jobs.detect.outputs.hasChanges }}
-
-jobs:
-  detect:
-    runs-on: ubuntu-latest
-    outputs:
-      matrix: ${{ steps.set-matrix.outputs.matrix }}
-      hasChanges: ${{ steps.set-matrix.outputs.hasChanges }}
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - id: filter
-        uses: dorny/paths-filter@v3
-        with:
-          base: dev
-          filters: |
-            android-kotlin: android-kotlin/**
-            spring-backend: spring-backend/**
-            llm-backend: llm-backend/**
-            next-frontend: next-frontend/**
-
       - id: set-matrix
         env:
           FILTER_ANDROID_KOTLIN: ${{ steps.filter.outputs.android-kotlin }}
@@ -77,7 +45,7 @@ jobs:
           if [[ "true" == "true" ]]; then folders+=("android-kotlin"); fi
           if [[ "true" == "true" ]]; then folders+=("llm-backend"); fi
 
-          --- Dynamic detection from paths-filter outputs ---
+          # --- Dynamic detection from paths-filter outputs ---
           # declare -A envMap=(
           #   ["android-kotlin"]=$FILTER_ANDROID_KOTLIN
           #   ["spring-backend"]=$FILTER_SPRING_BACKEND
@@ -103,4 +71,3 @@ jobs:
 
             echo "hasChanges=true" >> $GITHUB_OUTPUT
           fi
-
