--- a/.github/workflows/change-detect.yml
+++ b/.github/workflows/change-detect.yml
@@ -63,8 +63,8 @@ jobs:
             echo "matrix=[]" >> $GITHUB_OUTPUT
             echo "hasChanges=false" >> $GITHUB_OUTPUT
           else
-            matrix_json=$(printf '%s\n' "${folders[@]}" | jq -R . | jq -s '[.[] | {folder: .}]')
-
+            # matrix_json=$(printf '%s\n' "${folders[@]}" | jq -R . | jq -s '[.[] | {folder: .}]')
+            matrix_json=$(printf '%s\n' "${folders[@]}" | jq -R . | jq -s '{folder: .}')
             echo "matrix<<EOF" >> $GITHUB_OUTPUT
             echo "$matrix_json" >> $GITHUB_OUTPUT
             echo "EOF" >> $GITHUB_OUTPUT
