--- a/.github/workflows/change-detect.yml
+++ b/.github/workflows/change-detect.yml
@@ -36,35 +36,35 @@ jobs:
           FILTER_SPRING_BACKEND: ${{ steps.filter.outputs.spring-backend }}
           FILTER_LLM_BACKEND: ${{ steps.filter.outputs.llm-backend }}
           FILTER_NEXT_FRONTEND: ${{ steps.filter.outputs.next-frontend }}
+          FORCE_ALL: true
         run: |
           folders=()
 
-          # --- Hardcoded test values (comment/uncomment to use) ---
-          if [[ "true" == "true" ]]; then folders+=("next-frontend"); fi
-          if [[ "true" == "true" ]]; then folders+=("spring-backend"); fi
-          if [[ "true" == "true" ]]; then folders+=("android-kotlin"); fi
-          if [[ "true" == "true" ]]; then folders+=("llm-backend"); fi
+          if [[ "$FORCE_ALL" == "true" ]]; then
+            folders+=("next-frontend")
+            folders+=("spring-backend")
+            folders+=("android-kotlin")
+            folders+=("llm-backend")
+          else
+            declare -A envMap=(
+              ["android-kotlin"]=$FILTER_ANDROID_KOTLIN
+              ["spring-backend"]=$FILTER_SPRING_BACKEND
+              ["llm-backend"]=$FILTER_LLM_BACKEND
+              ["next-frontend"]=$FILTER_NEXT_FRONTEND
+            )
 
-          # --- Dynamic detection from paths-filter outputs ---
-          # declare -A envMap=(
-          #   ["android-kotlin"]=$FILTER_ANDROID_KOTLIN
-          #   ["spring-backend"]=$FILTER_SPRING_BACKEND
-          #   ["llm-backend"]=$FILTER_LLM_BACKEND
-          #   ["next-frontend"]=$FILTER_NEXT_FRONTEND
-          # )
-
-          # for folder in "${!envMap[@]}"; do
-          #   if [[ "${envMap[$folder]}" == "true" ]]; then
-          #     folders+=("$folder")
-          #   fi
-          # done
+            for folder in "${!envMap[@]}"; do
+              if [[ "${envMap[$folder]}" == "true" ]]; then
+                folders+=("$folder")
+              fi
+            done
+          fi
 
           if [ ${#folders[@]} -eq 0 ]; then
             echo "matrix=[]" >> $GITHUB_OUTPUT
             echo "hasChanges=false" >> $GITHUB_OUTPUT
           else
-            # matrix_json=$(printf '%s\n' "${folders[@]}" | jq -R . | jq -s '[.[] | {folder: .}]')
-            matrix_json=$(printf '%s\n' "${folders[@]}" | jq -R . | jq -s '{folder: .}')
+            matrix_json=$(printf '%s\n' "${folders[@]}" | jq -R . | jq -s '[.[] | {folder: .}]')
             echo "matrix<<EOF" >> $GITHUB_OUTPUT
             echo "$matrix_json" >> $GITHUB_OUTPUT
             echo "EOF" >> $GITHUB_OUTPUT
