--- a/.github/workflows/lint-and-sast.yml
+++ b/.github/workflows/lint-and-sast.yml
@@ -1,4 +1,5 @@
 name: Lint and SAST
+
 on:
   workflow_call:
     inputs:
@@ -72,6 +73,7 @@ jobs:
         if: env.FOLDER == 'spring-backend'
         run: |
           cd "$FOLDER"
+          chmod +x ./mvnw
           ./mvnw clean verify spotbugs:check checkstyle:check pmd:check -DskipTests
 
       - name: Upload SpotBugs report
@@ -100,6 +102,7 @@ jobs:
         if: env.FOLDER == 'android-kotlin'
         run: |
           cd "$FOLDER"
+          chmod +x ./gradlew
           ./gradlew ktlintCheck -PreportOutput=ktlint-report.xml || true
 
       - name: Upload ktlint report
@@ -113,6 +116,7 @@ jobs:
         if: env.FOLDER == 'android-kotlin'
         run: |
           cd "$FOLDER"
+          chmod +x ./gradlew
           ./gradlew detekt
 
       - name: Upload detekt report
@@ -122,7 +126,7 @@ jobs:
           name: detekt-report
           path: ${{ env.FOLDER }}/build/reports/detekt/detekt.xml
 
-      # LLM backend python lint & security (commented out)
+      # LLM backend Python lint & security
       - name: Run Ruff and Bandit
         if: env.FOLDER == 'llm-backend'
         run: |
@@ -143,4 +147,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: bandit-report
-          path: ${{ env.FOLDER }}/bandit-report.json
+          path:
