fix(deploy): move nginx.conf to infra/ansible/files

--- a/infra/ansible/playbook.yml
+++ b/infra/ansible/playbook.yml
@@ -27,7 +27,7 @@
 
     - name: Copy nginx.conf to EC2 server
       copy:
-        src: ./nginx.conf
+        src: files/nginx.conf
         dest: /home/ubuntu/nginx.conf
         owner: ubuntu
         mode: "0644"
