--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -105,7 +105,7 @@ jobs:
           echo "[all]" > ${{ inputs.inventory_file }}
           echo "${{ steps.tf-output.outputs.INSTANCE_IP }}" >> ${{ inputs.inventory_file }}
 
-      - name: Run Ansible playbook to deploy
+      - name: Run Ansible playbook to deploy containers
         working-directory: ${{ inputs.ansible_dir }}
         run: |
           export IMAGE_TAG=${{ inputs.image_tag }}
