--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -110,13 +110,17 @@ jobs:
           echo "[all]" > ${{ inputs.inventory_file }}
           echo "${{ steps.tf-output.outputs.INSTANCE_IP }}" >> ${{ inputs.inventory_file }}
 
+      - name: Debug BACKEND_ENV_B64
+        run: echo "$BACKEND_ENV_B64" | head -c 50
+        env:
+          BACKEND_ENV_B64: ${{ secrets.BACKEND_ENV_B64 }}
+
       - name: Run Ansible playbook to deploy containers
         working-directory: ${{ inputs.ansible_dir }}
         run: |
-          export IMAGE_TAG=${{ inputs.image_tag }}
-          export DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }}
-          export BACKEND_ENV_B64=${{ secrets.BACKEND_ENV_B64 }}
-          ansible-playbook -i ${{ inputs.inventory_file }} playbook.yml --private-key ../../private_key.pem -u ubuntu
+          ansible-playbook -i ${{ inputs.inventory_file }} playbook.yml \
+            --private-key ../../private_key.pem -u ubuntu \
+            --extra-vars "backend_env_b64=${{ secrets.BACKEND_ENV_B64 }} image_tag=${{ inputs.image_tag }} docker_username=${{ secrets.DOCKER_USERNAME }}"
         env:
           ANSIBLE_HOST_KEY_CHECKING: False
 
